Complex crowding cost graph

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -17,7 +17,8 @@
     "# %matplotlib inline for print mode\n",
     "%matplotlib widget\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "ASPECT = 1.4"
    ]
   },
   {
@@ -66,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1af5c1f2632148cea7b4908c269f287f",
+       "model_id": "b68de2b85bfe4bd6bbcda710a7163270",
        "version_major": 2,
        "version_minor": 0
       },
@@ -115,7 +116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bba94f4c1a4e4a869e08aaf4d2482de0",
+       "model_id": "298ea3d83f7b46b29778ce0ffc7a5297",
        "version_major": 2,
        "version_minor": 0
       },
@@ -227,7 +228,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a041440cf2454f50ae8a98de0c269a4a",
+       "model_id": "813f303dc9c543958ab93a11447921cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -241,8 +242,11 @@
    ],
    "source": [
     "α = 2\n",
-    "axis = np.linspace(-5, 5, 200)\n",
-    "x, y = np.meshgrid(axis, axis)\n",
+    "Y = 5\n",
+    "x, y = np.meshgrid(\n",
+    "    np.linspace(-Y*ASPECT, Y*ASPECT, 200),\n",
+    "    np.linspace(-Y, Y, 200),\n",
+    ")\n",
     "b  = np.array((0.95,  1.10,  1.00,  1.00), ndmin=3)\n",
     "sx = np.array((1, -1, -1,  1), ndmin=3)\n",
     "sy = np.array((1,  1, -1, -1), ndmin=3)\n",
@@ -317,7 +321,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0f65e3f08d947b6804a5c43d362cbe8",
+       "model_id": "c308250bc9b0427aae6acc552bdc3f1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -333,6 +337,7 @@
     "α1 = 2\n",
     "α2 = 100\n",
     "C = 1.04\n",
+    "Y = 35\n",
     "\n",
     "other_nodes = np.array((\n",
     "    (-25, 20),\n",
@@ -340,8 +345,10 @@
     "    (  0, -4),\n",
     "    ( 21,-30),\n",
     "))\n",
-    "axis = np.linspace(-40, 40, 200)\n",
-    "x, y = np.meshgrid(axis, axis)\n",
+    "x, y = np.meshgrid(\n",
+    "    np.linspace(-Y*ASPECT, Y*ASPECT, 200),\n",
+    "    np.linspace(-Y, Y, 200),\n",
+    ")\n",
     "grid = np.stack((x, y), axis=2)[:, :, np.newaxis, :]\n",
     "node_dists = np.linalg.norm(\n",
     "    grid - other_nodes, axis=3\n",
@@ -448,6 +455,88 @@
     "    \\text{smin}(a(x,y)) + \\text{smin}(b(x,y))\n",
     "\\right)\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5b2685f4f84e40ec882f346dc9330f5f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "α1 = 0.5\n",
+    "α2 = 75\n",
+    "α3 = 75\n",
+    "C = 0.9\n",
+    "Y = 120\n",
+    "\n",
+    "other_nodes = np.array((\n",
+    "    (-20, 30),\n",
+    "    ( 20, 21),\n",
+    "    (  5,  6),\n",
+    "    ( 26,-20),\n",
+    "))\n",
+    "x, y = np.meshgrid(\n",
+    "    np.linspace(-Y*ASPECT, Y*ASPECT, 200),\n",
+    "    np.linspace(-Y, Y, 200),\n",
+    ")\n",
+    "grid = np.stack((x, y), axis=2)[:, :, np.newaxis, :]\n",
+    "node_dists = np.linalg.norm(\n",
+    "    grid - other_nodes, axis=3\n",
+    ")\n",
+    "\n",
+    "a = (\n",
+    "    1\n",
+    "    /(1 + np.exp(α1*(node_dists - 25)))\n",
+    ").sum(axis=2) - 1\n",
+    "b = (\n",
+    "    1\n",
+    "    /(1 + np.exp(-α1*(node_dists - 25)))\n",
+    "    /(1 + np.exp(α1*(node_dists - 120)))\n",
+    ").sum(axis=2) - 3\n",
+    "\n",
+    "with_min = (\n",
+    "    np.log(\n",
+    "        1 + np.exp(\n",
+    "            α2 * np.stack((a, b))\n",
+    "        )\n",
+    "    ) / α2\n",
+    ").sum(axis=0)\n",
+    "with_max = 1 - np.log(\n",
+    "    1 + np.exp(\n",
+    "        α3*(1 - with_min)\n",
+    "    )\n",
+    ") / α3\n",
+    "μ = C + (1 - C)*with_max\n",
+    "\n",
+    "fig = plt.figure(5)\n",
+    "plot = plt.contour(x, y, μ, levels=6)\n",
+    "fig.axes[0].set_axisbelow(True)\n",
+    "plt.title(f'Complex crowding cost, approximate sigmoid, α₁={α1}, α₂={α2}, α₃={α3}')\n",
+    "plt.scatter(other_nodes[:, 0], other_nodes[:, 1], c='k')\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Due to the strange logic associated with this cost, an equally strange pattern is produced with problematic local minima. It is expensive to be within 120 tiles of four NPCs; but as soon as you approach to the point where one of those NPCs is within 25 tiles, the cost temporarily decreases."
    ]
   }
  ],
