Move to a filled-contour plot

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b68de2b85bfe4bd6bbcda710a7163270",
+       "model_id": "e2009bee13fb43e39214e73f273ccebe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,7 +116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "298ea3d83f7b46b29778ce0ffc7a5297",
+       "model_id": "3e804a967f1f48b4bf861b512b39f667",
        "version_major": 2,
        "version_minor": 0
       },
@@ -228,7 +228,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "813f303dc9c543958ab93a11447921cb",
+       "model_id": "ede8df855b30414a8601910007af81b1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,7 +321,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c308250bc9b0427aae6acc552bdc3f1c",
+       "model_id": "97b8d8d57bae4d9fa730ad8a9dadc533",
        "version_major": 2,
        "version_minor": 0
       },
@@ -465,7 +465,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b2685f4f84e40ec882f346dc9330f5f",
+       "model_id": "bc4c650ba6e64c908e64ea16cdf23370",
        "version_major": 2,
        "version_minor": 0
       },
@@ -524,7 +524,8 @@
     "μ = C + (1 - C)*with_max\n",
     "\n",
     "fig = plt.figure(5)\n",
-    "plot = plt.contour(x, y, μ, levels=6)\n",
+    "plot = plt.contourf(x, y, μ, levels=10, cmap=plt.get_cmap('jet'))\n",
+    "plt.colorbar()\n",
     "fig.axes[0].set_axisbelow(True)\n",
     "plt.title(f'Complex crowding cost, approximate sigmoid, α₁={α1}, α₂={α2}, α₃={α3}')\n",
     "plt.scatter(other_nodes[:, 0], other_nodes[:, 1], c='k')\n",
