Soft-stair function

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e2009bee13fb43e39214e73f273ccebe",
+       "model_id": "883cec4d752c4f458fbc199ef8d600ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,7 +116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e804a967f1f48b4bf861b512b39f667",
+       "model_id": "784bdf4d7e7949078b66ef8b999653db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -228,7 +228,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ede8df855b30414a8601910007af81b1",
+       "model_id": "ebb00c7a1dfb4600b91001d352063926",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,7 +321,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97b8d8d57bae4d9fa730ad8a9dadc533",
+       "model_id": "5e5c7291dc3845febef97dcf2a382435",
        "version_major": 2,
        "version_minor": 0
       },
@@ -465,7 +465,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc4c650ba6e64c908e64ea16cdf23370",
+       "model_id": "0ddb694579a64053a8a7305488734434",
        "version_major": 2,
        "version_minor": 0
       },
@@ -537,7 +537,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Due to the strange logic associated with this cost, an equally strange pattern is produced with problematic local minima. It is expensive to be within 120 tiles of four NPCs; but as soon as you approach to the point where one of those NPCs is within 25 tiles, the cost temporarily decreases."
+    "Due to the strange logic associated with this cost, an equally strange pattern is produced with problematic local minima. It is expensive to be within 120 tiles of four NPCs; but as soon as you approach to the point where one of those NPCs is within 25 tiles, the cost temporarily decreases.\n",
+    "\n",
+    "Putting it all together\n",
+    "---\n",
+    "\n",
+    "Based on these:\n",
+    "\n",
+    "> - The below price modifiers are multiplicative\n",
+    "> - Factors that make an NPC happy will lower its prices for goods purchased from it, down to a minimum of 75%\n",
+    "> - Factors that make an NPC unhappy will raise its prices purchased from it, up to a maximum of 150%\n",
+    "> - Price modifiers are rounded to the nearest 5% increment\n",
+    "\n",
+    "The cost components need to be multiplied, receive a double softplus, and then receive a \"soft-staircase\".\n",
+    "\n",
+    "The staircase as suggested by \n",
+    "[this post](https://math.stackexchange.com/a/2049337/54983)\n",
+    "would be\n",
+    "\n",
+    "$$\n",
+    "0.05 \\left[\n",
+    "  \\frac {\n",
+    "    \\tanh \\left(\n",
+    "      \\alpha \\left(\n",
+    "        \\frac x {0.05}\n",
+    "        - \\left\\lfloor \\frac x {0.05} \\right\\rfloor\n",
+    "        - \\frac 1 2\n",
+    "      \\right)\n",
+    "    \\right)\n",
+    "  }\n",
+    "  {\n",
+    "    2 \\tanh ( \\alpha / 2 )\n",
+    "  }\n",
+    "  + \\frac 1 2\n",
+    "  + \\left\\lfloor\n",
+    "    \\frac x {0.05}\n",
+    "  \\right\\rfloor\n",
+    "\\right]\n",
+    "$$\n",
+    "\n",
+    "with $\\alpha > 5$ for increasing sharpness."
    ]
   }
  ],
