Bounds for final cost, per node

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -551,6 +551,19 @@
     "\n",
     "The cost components need to be multiplied, receive a double softplus, and then receive a \"soft-staircase\".\n",
     "\n",
+    "The softplus limits are possible via\n",
+    "\n",
+    "$$\n",
+    "0.75 + \\frac 1 \\alpha \\left[\n",
+    "  \\ln \\left(\n",
+    "    1 + e^{\\alpha(x - 0.75)}\n",
+    "  \\right)\n",
+    "  - \\ln \\left(\n",
+    "    1 + e^{\\alpha(x - 1.5)}\n",
+    "  \\right)\n",
+    "\\right]\n",
+    "$$\n",
+    "\n",
     "The staircase as suggested by \n",
     "[this post](https://math.stackexchange.com/a/2049337/54983)\n",
     "would be\n",
