Default jet and 8inch width; add example for pair costs in 2D

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -17,8 +17,14 @@
     "# %matplotlib inline for print mode\n",
     "%matplotlib widget\n",
     "import numpy as np\n",
+    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
-    "ASPECT = 1.4"
+    "\n",
+    "ASPECT = 1.4\n",
+    "mpl.rc('figure',\n",
+    "       figsize=(8, 8/ASPECT),  # inches\n",
+    "       dpi=100)\n",
+    "mpl.rc('image', cmap='jet')"
    ]
   },
   {
@@ -67,7 +73,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "883cec4d752c4f458fbc199ef8d600ef",
+       "model_id": "e7b0a4e66772430e9c9decb23f3cf849",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,7 +122,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "784bdf4d7e7949078b66ef8b999653db",
+       "model_id": "40fd787d4c6c4e16a8a81f340ee6a77f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -147,17 +153,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "With four example NPCs that are liked, disliked, loved and hated (respectively), this sigmoid approximation applies in two dimensions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "652d71821ebe4206bbbb270df7d50225",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "α = 2\n",
+    "Y = 60\n",
+    "\n",
+    "other_nodes = np.array((\n",
+    "    (-25, 20),\n",
+    "    ( 15, 11),\n",
+    "    (  0, -4),\n",
+    "    ( 21,-30),\n",
+    "))\n",
+    "node_rels = np.array((0.95, 1.05, 0.90, 1.10))\n",
+    "x, y = np.meshgrid(\n",
+    "    np.linspace(-Y*ASPECT, Y*ASPECT, 200),\n",
+    "    np.linspace(-Y, Y, 200),\n",
+    ")\n",
+    "grid = np.stack((x, y), axis=2)[:, :, np.newaxis, :]\n",
+    "node_dists = np.linalg.norm(\n",
+    "    grid - other_nodes, axis=3\n",
+    ")\n",
+    "μ = (\n",
+    "    1 + (node_rels - 1)/(\n",
+    "        1 + np.exp(α*(node_dists - 25))\n",
+    "    )\n",
+    ").prod(axis=2)\n",
+    "\n",
+    "fig = plt.figure(3)\n",
+    "plot = plt.contour(x, y, μ, levels=12)\n",
+    "fig.axes[0].set_axisbelow(True)\n",
+    "plt.title(f'Pair cost, approximate sigmoid, α={α}')\n",
+    "plt.colorbar()\n",
+    "plt.scatter(other_nodes[:, 0], other_nodes[:, 1], c='k')\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Biome costs\n",
     "---\n",
     "\n",
-    "Biome costs will be more complex:\n",
+    "A node incurs a cost or benefit to being in some biomes:\n",
     "\n",
     "> - Located in a Loved biome: 90%\n",
     "> - Located in a Liked biome: 95%\n",
     "> - Located in a Disliked biome: 105%\n",
     "> - Located in a Hated biome: 110%\n",
     "\n",
-    "because they require a two-dimensional cost function. The cost function depends on the calculated quadrant:\n",
+    "The cost function depends on the calculated quadrant, since the optimisation will assume that the town is centered:\n",
+    "\n",
+    "- in one biome;\n",
+    "- on the edge of two biomes beside or on top of one another; or\n",
+    "- at the corner of three biomes, where each biome exactly covers at least one Cartesian quadrant.\n",
     "\n",
     "$$\n",
     "\\theta \\in \\text{I}, 0 \\le \\theta < 4\n",
@@ -222,13 +294,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebb00c7a1dfb4600b91001d352063926",
+       "model_id": "9e406f52c7d442648397c9435fdfdb3b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,7 +329,7 @@
     "    / (1 + np.exp(-α*sy * y[:, :, np.newaxis]))\n",
     ").prod(axis=2)\n",
     "\n",
-    "fig = plt.figure(3)\n",
+    "fig = plt.figure(4)\n",
     "plot = plt.contour(x, y, μ, levels=15)\n",
     "fig.axes[0].set_axisbelow(True)\n",
     "plt.title(f'Biome cost, approximate sigmoid, α={α}')\n",
@@ -315,13 +387,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e5c7291dc3845febef97dcf2a382435",
+       "model_id": "e9405509f19b4b44977aa0298f47fc27",
        "version_major": 2,
        "version_minor": 0
       },
@@ -360,11 +432,11 @@
     ").prod(axis=2)\n",
     "μ = 1 + np.log(1 + np.exp(α2*(u/C - 1)))/α2\n",
     "\n",
-    "fig = plt.figure(4)\n",
-    "plot = plt.contour(x, y, μ, levels=8)\n",
+    "fig = plt.figure(5)\n",
+    "plot = plt.contour(x, y, μ, levels=12)\n",
     "fig.axes[0].set_axisbelow(True)\n",
     "plt.title(f'Crowding cost, approximate sigmoid, α₁={α1}, α₂={α2}')\n",
-    "plt.clabel(plot)\n",
+    "plt.colorbar()\n",
     "plt.scatter(other_nodes[:, 0], other_nodes[:, 1], c='k')\n",
     "plt.grid()\n",
     "plt.show()"
@@ -459,13 +531,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ddb694579a64053a8a7305488734434",
+       "model_id": "444c3c5c16ef463491684a51c628014a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -523,8 +595,8 @@
     ") / α3\n",
     "μ = C + (1 - C)*with_max\n",
     "\n",
-    "fig = plt.figure(5)\n",
-    "plot = plt.contourf(x, y, μ, levels=10, cmap=plt.get_cmap('jet'))\n",
+    "fig = plt.figure(6)\n",
+    "plot = plt.contour(x, y, μ, levels=6)\n",
     "plt.colorbar()\n",
     "fig.axes[0].set_axisbelow(True)\n",
     "plt.title(f'Complex crowding cost, approximate sigmoid, α₁={α1}, α₂={α2}, α₃={α3}')\n",
