Replace with new default colormap, use filled contours in more places

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -23,8 +23,7 @@
     "ASPECT = 1.4\n",
     "mpl.rc('figure',\n",
     "       figsize=(8, 8/ASPECT),  # inches\n",
-    "       dpi=100)\n",
-    "mpl.rc('image', cmap='jet')"
+    "       dpi=100)"
    ]
   },
   {
@@ -73,7 +72,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7b0a4e66772430e9c9decb23f3cf849",
+       "model_id": "27fdb1c14f7348e3ae5e2feed0b95aae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,7 +121,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40fd787d4c6c4e16a8a81f340ee6a77f",
+       "model_id": "f9ae488bd3b644838aaaa8be41d351f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +163,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "652d71821ebe4206bbbb270df7d50225",
+       "model_id": "4e2776c3be444ad7825efc1ca57f18ca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -202,7 +201,7 @@
     ").prod(axis=2)\n",
     "\n",
     "fig = plt.figure(3)\n",
-    "plot = plt.contour(x, y, μ, levels=12)\n",
+    "plot = plt.contourf(x, y, μ, levels=20)\n",
     "fig.axes[0].set_axisbelow(True)\n",
     "plt.title(f'Pair cost, approximate sigmoid, α={α}')\n",
     "plt.colorbar()\n",
@@ -300,7 +299,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e406f52c7d442648397c9435fdfdb3b",
+       "model_id": "fe6d370f8c6b4b2497d9754fd992d6ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -345,7 +344,7 @@
     "Crowding Cost\n",
     "---\n",
     "\n",
-    "Multi-node interactions will also be more complex:\n",
+    "Multi-node interactions will be complex:\n",
     "\n",
     "> Two or more other NPCs within 25 tiles (for each additional NPC): 104%\n",
     "\n",
@@ -393,7 +392,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9405509f19b4b44977aa0298f47fc27",
+       "model_id": "aaf760d809ad4db6809381371476b539",
        "version_major": 2,
        "version_minor": 0
       },
@@ -433,7 +432,7 @@
     "μ = 1 + np.log(1 + np.exp(α2*(u/C - 1)))/α2\n",
     "\n",
     "fig = plt.figure(5)\n",
-    "plot = plt.contour(x, y, μ, levels=12)\n",
+    "plot = plt.contourf(x, y, μ, levels=20)\n",
     "fig.axes[0].set_axisbelow(True)\n",
     "plt.title(f'Crowding cost, approximate sigmoid, α₁={α1}, α₂={α2}')\n",
     "plt.colorbar()\n",
@@ -537,7 +536,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "444c3c5c16ef463491684a51c628014a",
+       "model_id": "2e1e2a00763f4edaa271547b995b3eb3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -596,7 +595,7 @@
     "μ = C + (1 - C)*with_max\n",
     "\n",
     "fig = plt.figure(6)\n",
-    "plot = plt.contour(x, y, μ, levels=6)\n",
+    "plot = plt.contourf(x, y, μ, levels=20)\n",
     "plt.colorbar()\n",
     "fig.axes[0].set_axisbelow(True)\n",
     "plt.title(f'Complex crowding cost, approximate sigmoid, α₁={α1}, α₂={α2}, α₃={α3}')\n",
