Illustrative examples for staircase and outer limit

--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -72,7 +72,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27fdb1c14f7348e3ae5e2feed0b95aae",
+       "model_id": "0fe9cc16e001430c8827d60f3ef0f3a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,7 +121,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9ae488bd3b644838aaaa8be41d351f4",
+       "model_id": "1000572685984c5b8b2fd65f2a8cfbc9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,7 +163,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e2776c3be444ad7825efc1ca57f18ca",
+       "model_id": "3e2891b4b4024378a54b5aa52270e232",
        "version_major": 2,
        "version_minor": 0
       },
@@ -299,7 +299,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe6d370f8c6b4b2497d9754fd992d6ce",
+       "model_id": "f9e5181f74ff4e978d197a9a98d3f2bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -392,7 +392,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aaf760d809ad4db6809381371476b539",
+       "model_id": "751a964a9bf84160a24c014072b147b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -487,8 +487,8 @@
     "\\sum_i\n",
     "\\frac 1 {\n",
     "    \\left(\n",
-    "        1 + e^{\\alpha_1 (\n",
-    "            25 - ||m_i - n||_F\n",
+    "        1 + e^{-\\alpha_1 (\n",
+    "            ||m_i - n||_F - 25\n",
     "        )}\n",
     "    \\right)\n",
     "    \\left(\n",
@@ -536,7 +536,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e1e2a00763f4edaa271547b995b3eb3",
+       "model_id": "420d8b920d56468b8efcb89db3f45b58",
        "version_major": 2,
        "version_minor": 0
       },
@@ -633,8 +633,51 @@
     "    1 + e^{\\alpha(x - 1.5)}\n",
     "  \\right)\n",
     "\\right]\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7f25f0c4cbd34e479333ea827399d51b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "α = np.array([5, 7, 10, 20, 60], ndmin=2)\n",
+    "x = np.array(np.linspace(0, 2, 200), ndmin=2).T\n",
+    "μ = 0.75 + (\n",
+    "    np.log(1 + np.exp(α*(x - 0.75))) -\n",
+    "    np.log(1 + np.exp(α*(x - 1.50)))\n",
+    ") / α\n",
+    "fig = plt.figure(7)\n",
+    "plt.plot(x, μ)\n",
+    "fig.axes[0].set_axisbelow(True)\n",
+    "plt.title('Limited outer cost, approximate softplus')\n",
+    "plt.xlabel('Before limiting')\n",
+    "plt.ylabel('After limiting')\n",
+    "plt.legend(α.flatten(), title='α')\n",
+    "plt.grid()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The staircase as suggested by \n",
     "[this post](https://math.stackexchange.com/a/2049337/54983)\n",
     "would be\n",
@@ -661,6 +704,51 @@
     "$$\n",
     "\n",
     "with $\\alpha > 5$ for increasing sharpness."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "655985dfeb26472fbb40b36987166bf6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "α = np.array([5, 7, 10, 20, 60], ndmin=2)\n",
+    "C = 0.05\n",
+    "\n",
+    "x = np.array(np.linspace(0, 0.1, 200), ndmin=2).T\n",
+    "xfl = np.floor(x/C)\n",
+    "μ = C*(\n",
+    "    0.5 + xfl +\n",
+    "    np.tanh(\n",
+    "        α*(x/C - xfl - 0.5)\n",
+    "    )\n",
+    "    / 2 / np.tanh(α/2)\n",
+    ")\n",
+    "\n",
+    "fig = plt.figure(8)\n",
+    "plt.plot(x, μ)\n",
+    "fig.axes[0].set_axisbelow(True)\n",
+    "plt.title('Approximate staircase')\n",
+    "plt.xlabel('Before stair')\n",
+    "plt.ylabel('After stair')\n",
+    "plt.legend(α.flatten(), title='α')\n",
+    "plt.grid()\n",
+    "plt.show()"
    ]
   }
  ],
